objects/Eula_Tos__c.object
<CustomObject>
    <description>This object stores EULA/TOS information for the lead.</description>
    <fields>
        <fullName>Accepted_Date__c</fullName>
        <label>Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>EulaToss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eula_Id__c</fullName>
        <label>Eula Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Lead</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>EulaToss</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Eula/Tos</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>EulaTosNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eula/Toss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>